--- a/index.html
+++ b/index.html
@@ -160,6 +160,90 @@
             border: 5px solid goldenrod;
             margin-top: 100px;
         }
+            /*-----------------------------------------MOBILE RESPONSE---------------------------------*/
+
+        @media (max-width: 768px) {
+    /*-----------------------------------------design BOX---------------------------------*/
+            
+            .design{
+                align-items: center;
+                justify-content: space-between;
+                max-width: 80%;
+                height: auto;
+            }
+            .design h1, a{
+                font-size: 16px;
+            }
+            .design img{
+                width: 50%;
+                height: auto;
+                position: relative;
+                transform: none;
+                left: 0;
+                margin: 0 auto;
+            }
+    /*-----------------------------------------TEXT BOX(PINK)---------------------------------*/
+
+            .text_column{
+                align-items: center;
+                justify-content: space-between;
+                max-width: 80%;
+                height: auto;
+            }
+            .text_column h1{
+                font-size: 16px;
+            }
+    /*-----------------------------------------MARSHMALLOW--------RECIPE--------------------------------*/
+
+            .marsh_ing{
+                align-items: center;
+                justify-content: space-between;
+                max-width: 80%;
+                height: auto;
+            }
+            .marsh_ing h4,pre{
+                font-size: 16px;
+            }
+            .marsh_ing img{
+                width: 50%;
+                height: auto;
+                position: relative;
+                transform: none;
+                left: 0;
+                margin: 0 auto;
+            }
+    /*-----------------------------------------MARSHMALLOW--------METHOD--------------------------------*/
+
+            .marsh_meth{
+                align-items: center;
+                justify-content: space-between;
+                max-width: 80%;
+                height: auto;
+            }
+            .marsh_meth h4,ul,li{
+                font-size: 16px;
+            }
+    /*-----------------------------------------TEXT BOX(PINK)---------------------------------*/
+
+            .crochet{
+                align-items: center;
+                justify-content: space-between;
+                max-width: 80%;
+                height: auto;
+            }
+            .crochet dd,dt{
+                font-size: 16px;
+            }
+            .crochet video{
+                width: 50%;
+                height: auto;
+                position: relative;
+                transform: none;
+                left: 0;
+                margin: 0 auto;
+            }
+            
+        }
 
     </style>
 </head>
@@ -278,3 +362,4 @@
     <br>
 </body>
 </html>
+
