--- a/index.html
+++ b/index.html
@@ -158,87 +158,88 @@
     /*-----------------------------------------MOBILE RESPONSE---------------------------------*/
 
         @media (max-width: 768px) {
-    /*-----------------------------------------design BOX---------------------------------*/
-            
-            .design{
-                align-items: center;
-                justify-content: space-between;
-                max-width: 80%;
-                height: auto;
-            }
-            .design h1, a{
-                font-size: 16px;
-            }
-            .design img{
-                width: 50%;
-                height: auto;
-                position: relative;
-                transform: none;
-                left: 0;
-                margin: 0 auto;
-            }
-    /*-----------------------------------------TEXT BOX(PINK)---------------------------------*/
 
-            .text_column{
-                align-items: center;
-                justify-content: space-between;
-                max-width: 80%;
-                height: auto;
-            }
-            .text_column h1{
-                font-size: 16px;
-            }
-    /*-----------------------------------------MARSHMALLOW--------RECIPE--------------------------------*/
+    /* STACK EVERYTHING VERTICALLY */
+    .container{
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
 
-            .marsh_ing{
-                align-items: center;
-                justify-content: space-between;
-                max-width: 80%;
-                height: auto;
-            }
-            .marsh_ing h4,pre{
-                font-size: 16px;
-            }
-            .marsh_ing img{
-                width: 50%;
-                height: auto;
-                position: relative;
-                transform: none;
-                left: 0;
-                margin: 0 auto;
-            }
-    /*-----------------------------------------MARSHMALLOW--------METHOD--------------------------------*/
+    /* -------- DESIGN BOX -------- */
+    .design{
+        width: 90%;
+        height: auto;
+        justify-content: center;
+    }
+    .design h1{
+        font-size: 18px;
+        text-align: center;
+    }
+    .design img{
+        width: 90%;
+        height: auto;
+        margin: 15px 0;
+    }
 
-            .marsh_meth{
-                align-items: center;
-                justify-content: space-between;
-                max-width: 80%;
-                height: auto;
-            }
-            .marsh_meth h4,ul,li{
-                font-size: 16px;
-            }
-    /*-----------------------------------------TEXT BOX(PINK)---------------------------------*/
+    /* -------- TEXT COLUMN -------- */
+    .text_column{
+        width: 90%;
+        height: auto;
+        padding: 10px;
+        justify-content: center;
+    }
+    .text_column h1{
+        font-size: 18px;
+        text-align: center;
+    }
 
-            .crochet{
-                align-items: center;
-                justify-content: space-between;
-                max-width: 80%;
-                height: auto;
-            }
-            .crochet dd,dt{
-                font-size: 16px;
-            }
-            .crochet video{
-                width: 50%;
-                height: auto;
-                position: relative;
-                transform: none;
-                left: 0;
-                margin: 0 auto;
-            }
-            
-        }
+    /* -------- MARSHMALLOW INGREDIENTS -------- */
+    .marsh_ing{
+        width: 90%;
+        height: auto;
+    }
+    .marsh_ing h4{
+        font-size: 20px;
+    }
+    .marsh_ing pre{
+        font-size: 16px;
+    }
+    .marsh_ing img{
+        width: 90%;
+        height: auto;
+        margin-top: 10px;
+    }
+
+    /* -------- MARSHMALLOW METHOD -------- */
+    .marsh_meth{
+        width: 90%;
+        height: auto;
+    }
+    .marsh_meth h4{
+        font-size: 20px;
+    }
+    .marsh_meth ul li{
+        font-size: 16px;
+    }
+
+    /* -------- CROCHET BOX -------- */
+    .crochet{
+        width: 90%;
+        height: auto;
+        justify-content: center;
+    }
+    .crochet dt,
+    .crochet dd{
+        font-size: 16px;
+    }
+    .crochet video{
+        width: 90%;
+        height: auto;
+        margin-top: 20px;
+    }
+}
+
     </style>
 </head>
 <body>
@@ -358,3 +359,4 @@
     <br>
 </body>
 </html>
+
